Update the bad logic in em / strong and fix the youtube video z-index on the iframe

--- a/src/_component/layout/layout.scss
+++ b/src/_component/layout/layout.scss
@@ -56,7 +56,7 @@ hr {
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
+        // z-index: -1;
     }
 }
 
